--- a/index.html
+++ b/index.html
@@ -6,119 +6,239 @@
     <title>Turvallisuusohjeet</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
+    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
     <script src="https://kit.fontawesome.com/b4a959dac2.js" crossorigin="anonymous"></script>
+    <style>
+        header,
+        footer {
+            background-color: #333;
+            color: white;
+        }
+
+        .box-nav {
+            background-color: #f1f1f1;
+            overflow-x: hidden;
+            border-right: 1px solid #ddd;
+        }
+
+        .box-nav a {
+            padding: 10px;
+            text-decoration: none;
+            color: #818181;
+            border-bottom: 1px solid #ddd;
+        }
+
+        .box-nav a:hover {
+            color: #ddd;
+            background-color: #090222;
+        }
+
+        .main {
+            margin-left: 3rem;
+            margin-right: 3rem;
+            padding: 0px 10px;
+        }
+
+        .row {
+            display: flex;
+            flex-wrap: wrap;
+        }
+
+        .column {
+            flex: 1;
+            padding: 10px;
+        }
+
+        .imagecontainer {
+            width: 100%;
+            height: auto;
+            padding: 10px;
+        }
+    </style>
 </head>
 
 <body>
-    <div class="container">
-        <nav class="navbar">
-            <a class="navbar-brand" href="#">Abako</a>
-            <i class="fas fa-user"></i>Makke Peippaaja
-            <i class="fas fa-bell"></i>10
-            <i class="fas fa-search"></i>
-            <i class="fas fa-folder-open"></i>
-        </nav>
-        <div>
-            <nav aria-label="breadcrumb">
+    <header>
+        <div class="d-flex">
+            <div class="p-2 flex-grow-1">
+                <h5>Abako</h5>
+            </div>
+            <div class="p-2">
+                <a href="#"><i class="fas fa-user"></i></a>Makke Peippaaja
+                <a href="#"><i class="fas fa-bell"></i></a> 10
+                <a href="#"><i class="fas fa-folder-open"></i></a>
+                <a href="#"><i class="fas fa-search"></i></a>
+            </div>
+        </div>
+    </header>
+    <div class="d-flex main flex-grow-1">
+        <div class="d-flex flex-column">
+            <nav aria-label="breadcrumb" class="d-flex flex-row" style="flex: 1;">
                 <ol class="breadcrumb">
                     <li class="breadcrumb-item"><a href="#">Etusivu</a></li>
                     <li class="breadcrumb-item"><a href="#">Kirjasto</a></li>
                     <li class="breadcrumb-item active" aria-current="page">Turvallisuusohjeet 2020</li>
                 </ol>
             </nav>
-        </div>
-        <h2><i class="fas fa-book"></i> Turvallisuusohjeet 2020</h2>
-        <ul class="list-unstyled">
-            <li class="sidebar-item">Yleistä</li>
-            <li class="sidebar-item">Vaaratilanteet</li>
-            <li class="sidebar-item">Tulipalot</li>
-            <li class="sidebar-item">Autokolarit</li>
-            <li class="sidebar-item">Onnettomuudet</li>
-            <li class="sidebar-item">Henkilövahingot</li>
-            <li class="sidebar-item">Luonnonmullistukset</li>
-            <li class="sidebar-item">Kääntövirheet</li>
-            <li class="sidebar-item">Murrot</li>
-        </ul>
-        <h3>Ajassa</h3>
-        <ul class="list-unstyled">
-            <li class="sidebar-item"><i class="fas fa-desktop"></i> Oma työpöytä</li>
-            <li class="sidebar-item"><i class="fas fa-newspaper"></i> Uutiset</li>
-            <li class="sidebar-item"><i class="fas fa-bell"></i> Ilmoitukset</li>
-            <li class="sidebar-item"><i class="fas fa-calendar"></i> Kalenteri</li>
-            <li class="sidebar-item"><i class="fas fa-users"></i> Ryhmätyötila</li>
-            <li class="sidebar-item"><i class="fas fa-comments"></i> Keskustelu</li>
-            <li class="sidebar-item"><i class="fas fa-envelope"></i> Sähköposti</li>
-        </ul>
-        <h3>Info</h3>
-        <ul class="list-unstyled">
-            <li class="sidebar-item"><i class="fas fa-users"></i> Henkilöstö</li>
-            <li class="sidebar-item"><i class="fas fa-graduation-cap"></i> Koulutukset</li>
-            <li class="sidebar-item"><i class="fas fa-briefcase"></i> asiakkaat ja vastuut</li>
-            <li class="sidebar-item"><i class="fas fa-clock"></i> Työsuunnitelmat</li>
-            <li class="sidebar-item"><i class="fas fa-lock"></i> Tietoturva</li>
-            <li class="sidebar-item"><i class="fas fa-book"></i> Kirjasto</li>
-            <li class="sidebar-item"><i class="fas fa-id-card"></i> Yhteystiedot</li>
-        </ul>
-        <div class="bodytext">
-            <h1>Tulipalot</h1>
-            <p class="lead">Makke "Jekke" Peippaaja | 7.2.2020</p>
-            <i class="fa-solid fa-thumbs-up"></i>102
-            <i class="fas fa-comments"></i>7
-            <div>
-                <div class="imagecontainer">
-                    <img src=lauren-coleman-shy0cEi7h1o-unsplash.jpg class="rounded float-left img-fluid"
-                        alt="Kuva auringonlaskun värittämästä pilvitaivaasta metsäisen kukkulan yll" width="30%"
-                        height="auto">
+            <div class="d-flex flex-row p2" style="flex: 1;">
+                <h2><i class="fas fa-book"></i> Turvallisuusohjeet 2020</h2>
+            </div>
+            <div class="d-flex flex-row" style="flex: 1;">
+                <div class="d-flex flex-column box-nav">
+                    <a href="#">Yleistä</a>
+                    <a href="#">Vaaratilanteet</a>
+                    <a href="#">Tulipalot</a>
+                    <a href="#">Autokolarit</a>
+                    <a href="#">Onnettomuudet</a>
+                    <a href="#">Henkilövahingot</a>
+                    <a href="#">Luonnonmullistukset</a>
+                    <a href="#">Kääntövirheet</a>
+                    <a href="#">Murrot</a>
                 </div>
-                <p>
-                    Jukolan talo, eteläisessä Hämeessä, seisoo erään mäen pohjoisella rinteellä, liki Toukolan kylää.
-                    Sen läheisin ym­päristö on kivinen tanner, mutta alempana alkaa pellot, joissa, ennenkuin talo oli
-                    häviöön mennyt, aaltoili teräinen vilja. Peltojen alla on niittu, apilaäyräinen, halkileikkaama
-                    monipolvisen ojan; ja runsaasti antoi se heiniä, ennenkuin joutui laitumeksi kylän karjalle. Muutoin
-                    on talolla avaria metsiä, soita ja erämaita, jotka, tämän tilustan ensimmäisen perustajan oivallisen
-                    toiminnan kautta, olivat langenneet sille osaksi jo ison jaon käydessä entisinä aikoina. Silloinpa
-                    Jukolan isäntä, pitäen enemmän huolta jälkeentulevainsa edusta kuin omasta parhaastansa, otti
-                    vastaan osaksensa kulon polttaman metsän ja sai sillä keinolla seitsemän vertaa enemmän kuin toiset
-                    naapurinsa. Mutta kaikki kulovalkean jäljet olivat jo kadonneet hänen piiristänsä ja tuuhea metsä
-                    kasvanut sijaan. - Ja tämä on niiden seitsemän veljen koto, joiden elämänvaiheita tässä nyt käyn
-                    kertoilemaan.
+                <div class="d-flex flex-column p2" style="flex: 1; max-width: 90%; margin:auto;">
+                    <h1>Tulipalot</h1>
+                    <div class="d-flex flex-row p2 lead">
+                        <div class="flex-grow-1">
+                            <p>Makke <i>"Jekke"</i> Peippaaja | 7.2.2020</p>
+                        </div>
+                        <div class="p-2">
+                            <i class="fa-solid fa-thumbs-up"></i>102
+                            <i class="fas fa-comments"></i>7
+                        </div>
+                    </div>
+                    <div class="d-flex flex-row">
+                        <div class="imagecontainer">
+                            <img src=lauren-coleman-shy0cEi7h1o-unsplash.jpg class="img-fluid"
+                                alt="Kuva auringonlaskun värittämästä pilvitaivaasta metsäisen kukkulan yllä">
+                        </div>
+                        <p>
+                            Jukolan talo, eteläisessä Hämeessä, seisoo erään mäen pohjoisella rinteellä, liki
+                            Toukolan
+                            kylää.
+                            Sen läheisin ym­päristö on kivinen tanner, mutta alempana alkaa pellot, joissa,
+                            ennenkuin
+                            talo
+                            oli
+                            häviöön mennyt, aaltoili teräinen vilja. Peltojen alla on niittu, apilaäyräinen,
+                            halkileikkaama
+                            monipolvisen ojan; ja runsaasti antoi se heiniä, ennenkuin joutui laitumeksi kylän
+                            karjalle.
+                            Muutoin
+                            on talolla avaria metsiä, soita ja erämaita, jotka, tämän tilustan ensimmäisen
+                            perustajan
+                            oivallisen
+                            toiminnan kautta, olivat langenneet sille osaksi jo ison jaon käydessä entisinä aikoina.
+                            Silloinpa
+                            Jukolan isäntä, pitäen enemmän huolta jälkeentulevainsa edusta kuin omasta parhaastansa,
+                            otti
+                            vastaan osaksensa kulon polttaman metsän ja sai sillä keinolla seitsemän vertaa enemmän
+                            kuin
+                            toiset
+                            naapurinsa. Mutta kaikki kulovalkean jäljet olivat jo kadonneet hänen piiristänsä ja
+                            tuuhea
+                            metsä
+                            kasvanut sijaan. - Ja tämä on niiden seitsemän veljen koto, joiden elämänvaiheita tässä
+                            nyt
+                            käyn
+                            kertoilemaan.
+                        </p>
+                    </div>
+                    <div class="d-flex flex-row">
+                        <p>
+                            Veljesten nimet vanhimmasta nuorimpaan ovat: Juhani, Tuomas, Aapo, Simeoni, Timo, Lauri
+                            ja
+                            Eero.
+                            Ovat heistä Tuomas ja Aapo kaksoispari ja samoin Timo ja Lauri. Juhanin, vanhimman
+                            veljen,
+                            ikä
+                            on
+                            kaksikymmentä ja viisi vuotta, mutta Eero, nuorin heistä, on tuskin nähnyt
+                            kahdeksantoista
+                            auringon
+                            kierrosta. Ruumiin vartalo heillä on tukeva ja harteva, pituus kohtalainen, paitsi
+                            Eeron,
+                            joka
+                            vielä
+                            on kovin lyhyt. Pisin heistä kaikista on Aapo, ehkä ei suinkaan hartevin. Tämä
+                            jälkimmäinen
+                            etu
+                            ja
+                            kunnia on Tuomaan, joka oikein on kuuluisa hartioittensa levyyden tähden. Omituisuus,
+                            joka
+                            heitä
+                            kaikkia yhteisesti merkitsee, on heidän ruskea ihonsa ja kankea, hampunkarvainen
+                            tukkansa,
+                            jonka
+                            karheus etenkin Juhanilla on silmään pistävä.
+                        </p>
+                    </div>
 
-                    Veljesten nimet vanhimmasta nuorimpaan ovat: Juhani, Tuomas, Aapo, Simeoni, Timo, Lauri ja Eero.
-                    Ovat heistä Tuomas ja Aapo kaksoispari ja samoin Timo ja Lauri. Juhanin, vanhimman veljen, ikä on
-                    kaksikymmentä ja viisi vuotta, mutta Eero, nuorin heistä, on tuskin nähnyt kahdeksantoista auringon
-                    kierrosta. Ruumiin vartalo heillä on tukeva ja harteva, pituus kohtalainen, paitsi Eeron, joka vielä
-                    on kovin lyhyt. Pisin heistä kaikista on Aapo, ehkä ei suinkaan hartevin. Tämä jälkimmäinen etu ja
-                    kunnia on Tuomaan, joka oikein on kuuluisa hartioittensa levyyden tähden. Omituisuus, joka heitä
-                    kaikkia yhteisesti merkitsee, on heidän ruskea ihonsa ja kankea, hampunkarvainen tukkansa, jonka
-                    karheus etenkin Juhanilla on silmään pistävä.
-                </p>
+                    <div class="d-flex flex-row justify-content-center">
+                        <blockquote class="blockquote">
+                            <hr>
+                            <p><i>Veljesten nimet vanhimmasta nuorimpaan ovat: <br />
+                                    Juhani, Tuomas, Aapo, Simeoni, Timo, Lauri ja Eero.</i></p>
+                            <hr>
+                        </blockquote>
+                    </div>
+                    <div class="d-flex flex-row">
+                        <p>
+                            Heidän isäänsä, joka oli ankaran innokas metsämies, kohtasi hänen parhaassa iässään äkisti
+                            surma,
+                            kun hän tappeli äkeän karhun kanssa. Molemmat silloin, <b>niin metsän kontio kuin mies,
+                                löyttiin
+                                kuolleina</b>, toinen toisensa rinnalla maaten verisellä tanterella. Pahoin oli mies
+                            haavoitettu,
+                            mutta
+                            pedonkin sekä kurkku että kylki nähtiin puukon viiltämänä ja hänen rintansa kiväärin tuiman
+                            luodin
+                            lävistämänä. Niin lopetti päivänsä roteva mies, joka oli kaatanut enemmän kuin viisikymmentä
+                            karhua.
+                            ­ Mutta näiden metsäretkiensä kautta löi hän laimin työn ja toimen talossansa, joka
+                            vähitellen,
+                            ilman esimiehen johtoa, joutui rappiolle. Eivät kyenneet hänen poikansakaan kyntöön ja
+                            kylvöön;
+                            sillä olivatpa he perineet isältänsä saman voimallisen innon metsäotusten pyyntöön. He
+                            rakentelivat
+                            satimia, loukkuja, ansaita ja teerentarhoja surmaksi linnuille ja jäniksille. Niin viettivät
+                            he
+                            poikuutensa ajat, kunnes rupesivat käsittelemään tuliluikkua ja rohkenivat lähestyä otsoa
+                            korvessa.
+                        </p>
+                    </div>
+                </div>
             </div>
-            <div class="quotecontainer">
-                <blockquote class="blockquote">
-                    <p>Veljesten nimet vanhimmasta nuorimpaan ovat: <br />
-                        Juhani, Tuomas, Aapo, Simeoni, Timo, Lauri ja Eero.</p>
-                </blockquote>
-            </div>
-            <p>
-                Heidän isäänsä, joka oli ankaran innokas metsämies, kohtasi hänen parhaassa iässään äkisti surma,
-                kun hän tappeli äkeän karhun kanssa. Molemmat silloin, <b>niin metsän kontio kuin mies, löyttiin
-                    kuolleina</b>, toinen toisensa rinnalla maaten verisellä tanterella. Pahoin oli mies haavoitettu,
-                mutta
-                pedonkin sekä kurkku että kylki nähtiin puukon viiltämänä ja hänen rintansa kiväärin tuiman luodin
-                lävistämänä. Niin lopetti päivänsä roteva mies, joka oli kaatanut enemmän kuin viisikymmentä karhua.
-                ­ Mutta näiden metsäretkiensä kautta löi hän laimin työn ja toimen talossansa, joka vähitellen,
-                ilman esimiehen johtoa, joutui rappiolle. Eivät kyenneet hänen poikansakaan kyntöön ja kylvöön;
-                sillä olivatpa he perineet isältänsä saman voimallisen innon metsäotusten pyyntöön. He rakentelivat
-                satimia, loukkuja, ansaita ja teerentarhoja surmaksi linnuille ja jäniksille. Niin viettivät he
-                poikuutensa ajat, kunnes rupesivat käsittelemään tuliluikkua ja rohkenivat lähestyä otsoa korvessa.
-            </p>
         </div>
-        <footer class="footer">
-            <p>© Abako Oy 2023, Pyhäjärvenkatu 5 B, 33200 Tampere, 010 229 3800</p>
-        </footer>
+        <div class="d-flex flex-column" style="flex: 1;">
+            <div class="d-flex flex-column box-nav">
+                <h3>Ajassa</h3>
+                <a href="#"><i class="fas fa-desktop"></i> Oma työpöytä</a>
+                <a href="#"><i class="fas fa-newspaper"></i> Uutiset</a>
+                <a href="#"><i class="fas fa-bell"></i> Ilmoitukset</a>
+                <a href="#"><i class="fas fa-calendar"></i> Kalenteri</a>
+                <a href="#"><i class="fas fa-users"></i> Ryhmätyötila</a>
+                <a href="#"><i class="fas fa-comments"></i> Keskustelu</a>
+                <a href="#"><i class="fas fa-envelope"></i> Sähköposti</a>
+            </div>
+            <div class="d-flex flex-column box-nav">
+                <h3>Info</h3>
+                <a href="#"><i class="fas fa-users"></i> Henkilöstö</a>
+                <a href="#"><i class="fas fa-graduation-cap"></i> Koulutukset</a>
+                <a href="#"><i class="fas fa-briefcase"></i> asiakkaat ja vastuut</a>
+                <a href="#"><i class="fas fa-clock"></i> Työsuunnitelmat</a>
+                <a href="#"><i class="fas fa-lock"></i> Tietoturva</a>
+                <a href="#"><i class="fas fa-book"></i> Kirjasto</a>
+                <a href="#"><i class="fas fa-id-card"></i> Yhteystiedot</a>
+            </div>
+        </div>
     </div>
-    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
+    <footer>
+        <div class="d-flex flex-shrink-0 flex-row p-2">
+            <p>&copy; Abako Oy 2023, Pyhäjärvenkatu 5 B, 33200 Tampere, 010 229 3800</p>
+        </div>
+    </footer>
 </body>
 
 </html>
