--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
     <style>
         header,
         footer {
-            background-color: #333;
-            color: white;
+            background-color: #2d353c;
+            color: #f5f5f5;
         }
 
         .box-nav {
-            background-color: #f1f1f1;
+            background-color: #f5f5f5;
             overflow-x: hidden;
             border-right: 1px solid #ddd;
         }
@@ -31,8 +31,8 @@
         }
 
         .box-nav a:hover {
-            color: #ddd;
-            background-color: #090222;
+            color: #fff;
+            background-color: #2d353c;
         }
 
         .main {
