use a client-side web api to create the navigaatiopalsta

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
     <script src="https://kit.fontawesome.com/b4a959dac2.js" crossorigin="anonymous"></script>
+
     <style>
         header,
         footer {
@@ -62,10 +63,10 @@
 <body>
     <header>
         <div class="d-flex">
-            <div class="p-2 flex-grow-1">
+            <div class="p-2 flex-grow-1" style="margin-left: 3rem;">
                 <h5>Abako</h5>
             </div>
-            <div class="p-2">
+            <div class="p-2" style="margin-right: 6rem;">
                 <a href="#"><i class="fas fa-user"></i></a>Makke Peippaaja
                 <a href="#"><i class="fas fa-bell"></i></a> 10
                 <a href="#"><i class="fas fa-folder-open"></i></a>
@@ -86,16 +87,7 @@
                 <h2><i class="fas fa-book"></i> Turvallisuusohjeet 2020</h2>
             </div>
             <div class="d-flex flex-row" style="flex: 1;">
-                <div class="d-flex flex-column box-nav">
-                    <a href="#">Yleistä</a>
-                    <a href="#">Vaaratilanteet</a>
-                    <a href="#">Tulipalot</a>
-                    <a href="#">Autokolarit</a>
-                    <a href="#">Onnettomuudet</a>
-                    <a href="#">Henkilövahingot</a>
-                    <a href="#">Luonnonmullistukset</a>
-                    <a href="#">Kääntövirheet</a>
-                    <a href="#">Murrot</a>
+                <div class="d-flex flex-column box-nav navigaatiopalsta">
                 </div>
                 <div class="d-flex flex-column p2" style="flex: 1; max-width: 90%; margin:auto;">
                     <h1>Tulipalot</h1>
@@ -239,6 +231,6 @@
             <p>&copy; Abako Oy 2023, Pyhäjärvenkatu 5 B, 33200 Tampere, 010 229 3800</p>
         </div>
     </footer>
+    <script src="script.js"></script>
 </body>
-
 </html>
