Style the breadcrumb

--- a/index.html
+++ b/index.html
@@ -54,7 +54,6 @@
 
         .box-nav a {
             padding: 10px;
-            text-decoration: none;
             color: #818181;
             border-bottom: 1px solid #ddd;
         }
@@ -84,6 +83,14 @@
             width: 100%;
             height: auto;
             padding: 10px;
+        }
+
+        .breadcrumb-item a {
+            color: #333;
+        }
+        .breadcrumb-item.active {
+            color: #333;
+            font-weight: bold;
         }
     </style>
 </head>
@@ -262,4 +269,5 @@
     <script src="script.js"></script>
     <script src="CustomIconLink.js"></script>
 </body>
+
 </html>
